--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
+    <section id="color-palette">
+      <div class="color" id="color-one"></div>
+      <div class="color" id="color-two"></div>
+      <div class="color" id="color-three"></div>
+      <div class="color" id="color-four"></div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
