--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
-      <div class="color" id="color-one"></div>
-      <div class="color" id="color-two"></div>
-      <div class="color" id="color-three"></div>
-      <div class="color" id="color-four"></div>
+      <div class="color" id="block-one"></div>
+      <div class="color" id="block-two"></div>
+      <div class="color" id="block-three"></div>
+      <div class="color" id="block-four"></div>
     </section>
+    <section id="pixel-board"></section>
     <script src="script.js"></script>
   </body>
 </html>
