--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
-      <div class="color" id="main-block"></div>
+      <div class="color" id="block-one"></div> 
       <div class="color" id="block-two"></div> 
       <div class="color" id="block-three"></div>
       <div class="color" id="block-four"></div>
