--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div class="color" id="block-three"></div>
       <div class="color" id="block-four"></div>
     </section>
+    <section>
+      <button id="clear-board">Limpar</button>
+    </section>
     <section id="pixel-board"></section>
     <script src="script.js"></script>
   </body>
