--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="color" id="block-three"></div>
       <div class="color" id="block-four"></div>
     </section>
-    <section>
+      <input type="number" name="size" id="board-size" min="1">
+      <button id="generate-board">VQV</button>
       <button id="clear-board">Limpar</button>
     </section>
     <section id="pixel-board"></section>
