--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
       <div class="color" id="block-one"></div> 
-      <div class="color" id="block-two"></div> 
-      <div class="color" id="block-three"></div>
-      <div class="color" id="block-four"></div>
+      <div class="color" id="block2"></div> 
+      <div class="color" id="block3"></div>
+      <div class="color" id="block4"></div>
     </section>
       <input type="number" name="size" id="board-size" min="1">
       <button id="generate-board">VQV</button>
